Analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    FLOAT
    PUNTO

Grammar

Rule 0     S' -> program
Rule 1     program -> preprocessor_directive_list function_definition_list
Rule 2     preprocessor_directive_list -> preprocessor_directive
Rule 3     preprocessor_directive_list -> preprocessor_directive preprocessor_directive_list
Rule 4     preprocessor_directive -> INCLUDE
Rule 5     function_definition_list -> function_definition
Rule 6     function_definition_list -> function_definition function_definition_list
Rule 7     function_definition -> TIPODATO IDENTIFICADOR LPAREN parameter_list RPAREN block
Rule 8     parameter_list -> declaration
Rule 9     parameter_list -> declaration COMA parameter_list
Rule 10    parameter_list -> empty
Rule 11    block -> LLLAVE RLLAVE
Rule 12    block -> LLLAVE statement_list RLLAVE
Rule 13    statement_list -> statement
Rule 14    statement_list -> statement statement_list
Rule 15    statement -> for_statement
Rule 16    statement -> assignment_statement
Rule 17    statement -> printf_statement
Rule 18    statement -> scanf_statement
Rule 19    statement -> declaration
Rule 20    statement -> if_statement
Rule 21    statement -> else_statement
Rule 22    statement -> function_call
Rule 23    declaration -> TIPODATO identificador_list PUNTOYCOMA
Rule 24    declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA
Rule 25    declaration -> TIPODATO IDENTIFICADOR CORCHETEIZQ NUMERO CORCHETEDER PUNTOYCOMA
Rule 26    identificador_list -> IDENTIFICADOR
Rule 27    identificador_list -> IDENTIFICADOR COMA identificador_list
Rule 28    assignment_statement -> IDENTIFICADOR IGUAL expression PUNTOYCOMA
Rule 29    assignment_statement -> IDENTIFICADOR CORCHETEIZQ expression CORCHETEDER IGUAL expression PUNTOYCOMA
Rule 30    expression -> expression SUMA expression
Rule 31    expression -> expression RESTA expression
Rule 32    expression -> expression MULTI expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> NUMERO
Rule 35    expression -> IDENTIFICADOR
Rule 36    expression -> CADENA
Rule 37    expression -> CARACTER
Rule 38    expression -> condition
Rule 39    expression -> LPAREN expression RPAREN
Rule 40    function_call -> IDENTIFICADOR LPAREN RPAREN PUNTOYCOMA
Rule 41    printf_statement -> PRINTF LPAREN CADENA RPAREN PUNTOYCOMA
Rule 42    printf_statement -> PRINTF LPAREN CADENA COMA expression RPAREN PUNTOYCOMA
Rule 43    scanf_statement -> SCANF LPAREN CADENA COMA AMPERSAND IDENTIFICADOR RPAREN PUNTOYCOMA
Rule 44    if_statement -> IF LPAREN condition RPAREN block
Rule 45    else_statement -> ELSE block
Rule 46    for_statement -> FOR LPAREN assignment_statement RPAREN block
Rule 47    condition -> expression COMPARADOR expression
Rule 48    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 43
CADENA               : 36 41 42 43
CARACTER             : 37
CHAR                 : 
COMA                 : 9 27 42 43
COMPARADOR           : 47
CORCHETEDER          : 25 29
CORCHETEIZQ          : 25 29
DIVIDE               : 33
ELSE                 : 45
FLOAT                : 
FOR                  : 46
IDENTIFICADOR        : 7 24 25 26 27 28 29 35 40 43
IF                   : 44
IGUAL                : 24 28 29
INCLUDE              : 4
LLLAVE               : 11 12
LPAREN               : 7 39 40 41 42 43 44 46
MULTI                : 32
NUMERO               : 25 34
PRINTF               : 41 42
PUNTO                : 
PUNTOYCOMA           : 23 24 25 28 29 40 41 42 43
RESTA                : 31
RLLAVE               : 11 12
RPAREN               : 7 39 40 41 42 43 44 46
SCANF                : 43
SUMA                 : 30
TIPODATO             : 7 23 24 25
error                : 

Nonterminals, with rules where they appear

assignment_statement : 16 46
block                : 7 44 45 46
condition            : 38 44
declaration          : 8 9 19
else_statement       : 21
empty                : 10
expression           : 24 28 29 29 30 30 31 31 32 32 33 33 39 42 47 47
for_statement        : 15
function_call        : 22
function_definition  : 5 6
function_definition_list : 1 6
identificador_list   : 23 27
if_statement         : 20
parameter_list       : 7 9
preprocessor_directive : 2 3
preprocessor_directive_list : 1 3
printf_statement     : 17
program              : 0
scanf_statement      : 18
statement            : 13 14
statement_list       : 12 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . preprocessor_directive_list function_definition_list
    (2) preprocessor_directive_list -> . preprocessor_directive
    (3) preprocessor_directive_list -> . preprocessor_directive preprocessor_directive_list
    (4) preprocessor_directive -> . INCLUDE

    INCLUDE         shift and go to state 4

    program                        shift and go to state 1
    preprocessor_directive_list    shift and go to state 2
    preprocessor_directive         shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> preprocessor_directive_list . function_definition_list
    (5) function_definition_list -> . function_definition
    (6) function_definition_list -> . function_definition function_definition_list
    (7) function_definition -> . TIPODATO IDENTIFICADOR LPAREN parameter_list RPAREN block

    TIPODATO        shift and go to state 7

    function_definition_list       shift and go to state 5
    function_definition            shift and go to state 6

state 3

    (2) preprocessor_directive_list -> preprocessor_directive .
    (3) preprocessor_directive_list -> preprocessor_directive . preprocessor_directive_list
    (2) preprocessor_directive_list -> . preprocessor_directive
    (3) preprocessor_directive_list -> . preprocessor_directive preprocessor_directive_list
    (4) preprocessor_directive -> . INCLUDE

    TIPODATO        reduce using rule 2 (preprocessor_directive_list -> preprocessor_directive .)
    INCLUDE         shift and go to state 4

    preprocessor_directive         shift and go to state 3
    preprocessor_directive_list    shift and go to state 8

state 4

    (4) preprocessor_directive -> INCLUDE .

    INCLUDE         reduce using rule 4 (preprocessor_directive -> INCLUDE .)
    TIPODATO        reduce using rule 4 (preprocessor_directive -> INCLUDE .)


state 5

    (1) program -> preprocessor_directive_list function_definition_list .

    $end            reduce using rule 1 (program -> preprocessor_directive_list function_definition_list .)


state 6

    (5) function_definition_list -> function_definition .
    (6) function_definition_list -> function_definition . function_definition_list
    (5) function_definition_list -> . function_definition
    (6) function_definition_list -> . function_definition function_definition_list
    (7) function_definition -> . TIPODATO IDENTIFICADOR LPAREN parameter_list RPAREN block

    $end            reduce using rule 5 (function_definition_list -> function_definition .)
    TIPODATO        shift and go to state 7

    function_definition            shift and go to state 6
    function_definition_list       shift and go to state 9

state 7

    (7) function_definition -> TIPODATO . IDENTIFICADOR LPAREN parameter_list RPAREN block

    IDENTIFICADOR   shift and go to state 10


state 8

    (3) preprocessor_directive_list -> preprocessor_directive preprocessor_directive_list .

    TIPODATO        reduce using rule 3 (preprocessor_directive_list -> preprocessor_directive preprocessor_directive_list .)


state 9

    (6) function_definition_list -> function_definition function_definition_list .

    $end            reduce using rule 6 (function_definition_list -> function_definition function_definition_list .)


state 10

    (7) function_definition -> TIPODATO IDENTIFICADOR . LPAREN parameter_list RPAREN block

    LPAREN          shift and go to state 11


state 11

    (7) function_definition -> TIPODATO IDENTIFICADOR LPAREN . parameter_list RPAREN block
    (8) parameter_list -> . declaration
    (9) parameter_list -> . declaration COMA parameter_list
    (10) parameter_list -> . empty
    (23) declaration -> . TIPODATO identificador_list PUNTOYCOMA
    (24) declaration -> . TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA
    (25) declaration -> . TIPODATO IDENTIFICADOR CORCHETEIZQ NUMERO CORCHETEDER PUNTOYCOMA
    (48) empty -> .

    TIPODATO        shift and go to state 12
    RPAREN          reduce using rule 48 (empty -> .)

    parameter_list                 shift and go to state 13
    declaration                    shift and go to state 14
    empty                          shift and go to state 15

state 12

    (23) declaration -> TIPODATO . identificador_list PUNTOYCOMA
    (24) declaration -> TIPODATO . IDENTIFICADOR IGUAL expression PUNTOYCOMA
    (25) declaration -> TIPODATO . IDENTIFICADOR CORCHETEIZQ NUMERO CORCHETEDER PUNTOYCOMA
    (26) identificador_list -> . IDENTIFICADOR
    (27) identificador_list -> . IDENTIFICADOR COMA identificador_list

    IDENTIFICADOR   shift and go to state 17

    identificador_list             shift and go to state 16

state 13

    (7) function_definition -> TIPODATO IDENTIFICADOR LPAREN parameter_list . RPAREN block

    RPAREN          shift and go to state 18


state 14

    (8) parameter_list -> declaration .
    (9) parameter_list -> declaration . COMA parameter_list

    RPAREN          reduce using rule 8 (parameter_list -> declaration .)
    COMA            shift and go to state 19


state 15

    (10) parameter_list -> empty .

    RPAREN          reduce using rule 10 (parameter_list -> empty .)


state 16

    (23) declaration -> TIPODATO identificador_list . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 20


state 17

    (24) declaration -> TIPODATO IDENTIFICADOR . IGUAL expression PUNTOYCOMA
    (25) declaration -> TIPODATO IDENTIFICADOR . CORCHETEIZQ NUMERO CORCHETEDER PUNTOYCOMA
    (26) identificador_list -> IDENTIFICADOR .
    (27) identificador_list -> IDENTIFICADOR . COMA identificador_list

    IGUAL           shift and go to state 21
    CORCHETEIZQ     shift and go to state 22
    PUNTOYCOMA      reduce using rule 26 (identificador_list -> IDENTIFICADOR .)
    COMA            shift and go to state 23


state 18

    (7) function_definition -> TIPODATO IDENTIFICADOR LPAREN parameter_list RPAREN . block
    (11) block -> . LLLAVE RLLAVE
    (12) block -> . LLLAVE statement_list RLLAVE

    LLLAVE          shift and go to state 25

    block                          shift and go to state 24

state 19

    (9) parameter_list -> declaration COMA . parameter_list
    (8) parameter_list -> . declaration
    (9) parameter_list -> . declaration COMA parameter_list
    (10) parameter_list -> . empty
    (23) declaration -> . TIPODATO identificador_list PUNTOYCOMA
    (24) declaration -> . TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA
    (25) declaration -> . TIPODATO IDENTIFICADOR CORCHETEIZQ NUMERO CORCHETEDER PUNTOYCOMA
    (48) empty -> .

    TIPODATO        shift and go to state 12
    RPAREN          reduce using rule 48 (empty -> .)

    declaration                    shift and go to state 14
    parameter_list                 shift and go to state 26
    empty                          shift and go to state 15

state 20

    (23) declaration -> TIPODATO identificador_list PUNTOYCOMA .

    COMA            reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    RPAREN          reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    FOR             reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    PRINTF          reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    SCANF           reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    TIPODATO        reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    IF              reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    ELSE            reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)
    RLLAVE          reduce using rule 23 (declaration -> TIPODATO identificador_list PUNTOYCOMA .)


state 21

    (24) declaration -> TIPODATO IDENTIFICADOR IGUAL . expression PUNTOYCOMA
    (30) expression -> . expression SUMA expression
    (31) expression -> . expression RESTA expression
    (32) expression -> . expression MULTI expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . NUMERO
    (35) expression -> . IDENTIFICADOR
    (36) expression -> . CADENA
    (37) expression -> . CARACTER
    (38) expression -> . condition
    (39) expression -> . LPAREN expression RPAREN
    (47) condition -> . expression COMPARADOR expression

    NUMERO          shift and go to state 29
    IDENTIFICADOR   shift and go to state 27
    CADENA          shift and go to state 30
    CARACTER        shift and go to state 31
    LPAREN          shift and go to state 33

    expression                     shift and go to state 28
    condition                      shift and go to state 32

state 22

    (25) declaration -> TIPODATO IDENTIFICADOR CORCHETEIZQ . NUMERO CORCHETEDER PUNTOYCOMA

    NUMERO          shift and go to state 34


state 23

    (27) identificador_list -> IDENTIFICADOR COMA . identificador_list
    (26) identificador_list -> . IDENTIFICADOR
    (27) identificador_list -> . IDENTIFICADOR COMA identificador_list

    IDENTIFICADOR   shift and go to state 35

    identificador_list             shift and go to state 36

state 24

    (7) function_definition -> TIPODATO IDENTIFICADOR LPAREN parameter_list RPAREN block .

    TIPODATO        reduce using rule 7 (function_definition -> TIPODATO IDENTIFICADOR LPAREN parameter_list RPAREN block .)
    $end            reduce using rule 7 (function_definition -> TIPODATO IDENTIFICADOR LPAREN parameter_list RPAREN block .)


state 25

    (11) block -> LLLAVE . RLLAVE
    (12) block -> LLLAVE . statement_list RLLAVE
    (13) statement_list -> . statement
    (14) statement_list -> . statement statement_list
    (15) statement -> . for_statement
    (16) statement -> . assignment_statement
    (17) statement -> . printf_statement
    (18) statement -> . scanf_statement
    (19) statement -> . declaration
    (20) statement -> . if_statement
    (21) statement -> . else_statement
    (22) statement -> . function_call
    (46) for_statement -> . FOR LPAREN assignment_statement RPAREN block
    (28) assignment_statement -> . IDENTIFICADOR IGUAL expression PUNTOYCOMA
    (29) assignment_statement -> . IDENTIFICADOR CORCHETEIZQ expression CORCHETEDER IGUAL expression PUNTOYCOMA
    (41) printf_statement -> . PRINTF LPAREN CADENA RPAREN PUNTOYCOMA
    (42) printf_statement -> . PRINTF LPAREN CADENA COMA expression RPAREN PUNTOYCOMA
    (43) scanf_statement -> . SCANF LPAREN CADENA COMA AMPERSAND IDENTIFICADOR RPAREN PUNTOYCOMA
    (23) declaration -> . TIPODATO identificador_list PUNTOYCOMA
    (24) declaration -> . TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA
    (25) declaration -> . TIPODATO IDENTIFICADOR CORCHETEIZQ NUMERO CORCHETEDER PUNTOYCOMA
    (44) if_statement -> . IF LPAREN condition RPAREN block
    (45) else_statement -> . ELSE block
    (40) function_call -> . IDENTIFICADOR LPAREN RPAREN PUNTOYCOMA

    RLLAVE          shift and go to state 37
    FOR             shift and go to state 48
    IDENTIFICADOR   shift and go to state 49
    PRINTF          shift and go to state 50
    SCANF           shift and go to state 51
    TIPODATO        shift and go to state 12
    IF              shift and go to state 52
    ELSE            shift and go to state 53

    statement_list                 shift and go to state 38
    statement                      shift and go to state 39
    for_statement                  shift and go to state 40
    assignment_statement           shift and go to state 41
    printf_statement               shift and go to state 42
    scanf_statement                shift and go to state 43
    declaration                    shift and go to state 44
    if_statement                   shift and go to state 45
    else_statement                 shift and go to state 46
    function_call                  shift and go to state 47

state 26

    (9) parameter_list -> declaration COMA parameter_list .

    RPAREN          reduce using rule 9 (parameter_list -> declaration COMA parameter_list .)


state 27

    (35) expression -> IDENTIFICADOR .

    PUNTOYCOMA      reduce using rule 35 (expression -> IDENTIFICADOR .)
    SUMA            reduce using rule 35 (expression -> IDENTIFICADOR .)
    RESTA           reduce using rule 35 (expression -> IDENTIFICADOR .)
    MULTI           reduce using rule 35 (expression -> IDENTIFICADOR .)
    DIVIDE          reduce using rule 35 (expression -> IDENTIFICADOR .)
    COMPARADOR      reduce using rule 35 (expression -> IDENTIFICADOR .)
    RPAREN          reduce using rule 35 (expression -> IDENTIFICADOR .)
    CORCHETEDER     reduce using rule 35 (expression -> IDENTIFICADOR .)


state 28

    (24) declaration -> TIPODATO IDENTIFICADOR IGUAL expression . PUNTOYCOMA
    (30) expression -> expression . SUMA expression
    (31) expression -> expression . RESTA expression
    (32) expression -> expression . MULTI expression
    (33) expression -> expression . DIVIDE expression
    (47) condition -> expression . COMPARADOR expression

    PUNTOYCOMA      shift and go to state 54
    SUMA            shift and go to state 55
    RESTA           shift and go to state 56
    MULTI           shift and go to state 57
    DIVIDE          shift and go to state 58
    COMPARADOR      shift and go to state 59


state 29

    (34) expression -> NUMERO .

    PUNTOYCOMA      reduce using rule 34 (expression -> NUMERO .)
    SUMA            reduce using rule 34 (expression -> NUMERO .)
    RESTA           reduce using rule 34 (expression -> NUMERO .)
    MULTI           reduce using rule 34 (expression -> NUMERO .)
    DIVIDE          reduce using rule 34 (expression -> NUMERO .)
    COMPARADOR      reduce using rule 34 (expression -> NUMERO .)
    RPAREN          reduce using rule 34 (expression -> NUMERO .)
    CORCHETEDER     reduce using rule 34 (expression -> NUMERO .)


state 30

    (36) expression -> CADENA .

    PUNTOYCOMA      reduce using rule 36 (expression -> CADENA .)
    SUMA            reduce using rule 36 (expression -> CADENA .)
    RESTA           reduce using rule 36 (expression -> CADENA .)
    MULTI           reduce using rule 36 (expression -> CADENA .)
    DIVIDE          reduce using rule 36 (expression -> CADENA .)
    COMPARADOR      reduce using rule 36 (expression -> CADENA .)
    RPAREN          reduce using rule 36 (expression -> CADENA .)
    CORCHETEDER     reduce using rule 36 (expression -> CADENA .)


state 31

    (37) expression -> CARACTER .

    PUNTOYCOMA      reduce using rule 37 (expression -> CARACTER .)
    SUMA            reduce using rule 37 (expression -> CARACTER .)
    RESTA           reduce using rule 37 (expression -> CARACTER .)
    MULTI           reduce using rule 37 (expression -> CARACTER .)
    DIVIDE          reduce using rule 37 (expression -> CARACTER .)
    COMPARADOR      reduce using rule 37 (expression -> CARACTER .)
    RPAREN          reduce using rule 37 (expression -> CARACTER .)
    CORCHETEDER     reduce using rule 37 (expression -> CARACTER .)


state 32

    (38) expression -> condition .

    PUNTOYCOMA      reduce using rule 38 (expression -> condition .)
    SUMA            reduce using rule 38 (expression -> condition .)
    RESTA           reduce using rule 38 (expression -> condition .)
    MULTI           reduce using rule 38 (expression -> condition .)
    DIVIDE          reduce using rule 38 (expression -> condition .)
    COMPARADOR      reduce using rule 38 (expression -> condition .)
    RPAREN          reduce using rule 38 (expression -> condition .)
    CORCHETEDER     reduce using rule 38 (expression -> condition .)


state 33

    (39) expression -> LPAREN . expression RPAREN
    (30) expression -> . expression SUMA expression
    (31) expression -> . expression RESTA expression
    (32) expression -> . expression MULTI expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . NUMERO
    (35) expression -> . IDENTIFICADOR
    (36) expression -> . CADENA
    (37) expression -> . CARACTER
    (38) expression -> . condition
    (39) expression -> . LPAREN expression RPAREN
    (47) condition -> . expression COMPARADOR expression

    NUMERO          shift and go to state 29
    IDENTIFICADOR   shift and go to state 27
    CADENA          shift and go to state 30
    CARACTER        shift and go to state 31
    LPAREN          shift and go to state 33

    expression                     shift and go to state 60
    condition                      shift and go to state 32

state 34

    (25) declaration -> TIPODATO IDENTIFICADOR CORCHETEIZQ NUMERO . CORCHETEDER PUNTOYCOMA

    CORCHETEDER     shift and go to state 61


state 35

    (26) identificador_list -> IDENTIFICADOR .
    (27) identificador_list -> IDENTIFICADOR . COMA identificador_list

    PUNTOYCOMA      reduce using rule 26 (identificador_list -> IDENTIFICADOR .)
    COMA            shift and go to state 23


state 36

    (27) identificador_list -> IDENTIFICADOR COMA identificador_list .

    PUNTOYCOMA      reduce using rule 27 (identificador_list -> IDENTIFICADOR COMA identificador_list .)


state 37

    (11) block -> LLLAVE RLLAVE .

    TIPODATO        reduce using rule 11 (block -> LLLAVE RLLAVE .)
    $end            reduce using rule 11 (block -> LLLAVE RLLAVE .)
    FOR             reduce using rule 11 (block -> LLLAVE RLLAVE .)
    IDENTIFICADOR   reduce using rule 11 (block -> LLLAVE RLLAVE .)
    PRINTF          reduce using rule 11 (block -> LLLAVE RLLAVE .)
    SCANF           reduce using rule 11 (block -> LLLAVE RLLAVE .)
    IF              reduce using rule 11 (block -> LLLAVE RLLAVE .)
    ELSE            reduce using rule 11 (block -> LLLAVE RLLAVE .)
    RLLAVE          reduce using rule 11 (block -> LLLAVE RLLAVE .)


state 38

    (12) block -> LLLAVE statement_list . RLLAVE

    RLLAVE          shift and go to state 62


state 39

    (13) statement_list -> statement .
    (14) statement_list -> statement . statement_list
    (13) statement_list -> . statement
    (14) statement_list -> . statement statement_list
    (15) statement -> . for_statement
    (16) statement -> . assignment_statement
    (17) statement -> . printf_statement
    (18) statement -> . scanf_statement
    (19) statement -> . declaration
    (20) statement -> . if_statement
    (21) statement -> . else_statement
    (22) statement -> . function_call
    (46) for_statement -> . FOR LPAREN assignment_statement RPAREN block
    (28) assignment_statement -> . IDENTIFICADOR IGUAL expression PUNTOYCOMA
    (29) assignment_statement -> . IDENTIFICADOR CORCHETEIZQ expression CORCHETEDER IGUAL expression PUNTOYCOMA
    (41) printf_statement -> . PRINTF LPAREN CADENA RPAREN PUNTOYCOMA
    (42) printf_statement -> . PRINTF LPAREN CADENA COMA expression RPAREN PUNTOYCOMA
    (43) scanf_statement -> . SCANF LPAREN CADENA COMA AMPERSAND IDENTIFICADOR RPAREN PUNTOYCOMA
    (23) declaration -> . TIPODATO identificador_list PUNTOYCOMA
    (24) declaration -> . TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA
    (25) declaration -> . TIPODATO IDENTIFICADOR CORCHETEIZQ NUMERO CORCHETEDER PUNTOYCOMA
    (44) if_statement -> . IF LPAREN condition RPAREN block
    (45) else_statement -> . ELSE block
    (40) function_call -> . IDENTIFICADOR LPAREN RPAREN PUNTOYCOMA

    RLLAVE          reduce using rule 13 (statement_list -> statement .)
    FOR             shift and go to state 48
    IDENTIFICADOR   shift and go to state 49
    PRINTF          shift and go to state 50
    SCANF           shift and go to state 51
    TIPODATO        shift and go to state 12
    IF              shift and go to state 52
    ELSE            shift and go to state 53

    statement                      shift and go to state 39
    statement_list                 shift and go to state 63
    for_statement                  shift and go to state 40
    assignment_statement           shift and go to state 41
    printf_statement               shift and go to state 42
    scanf_statement                shift and go to state 43
    declaration                    shift and go to state 44
    if_statement                   shift and go to state 45
    else_statement                 shift and go to state 46
    function_call                  shift and go to state 47

state 40

    (15) statement -> for_statement .

    FOR             reduce using rule 15 (statement -> for_statement .)
    IDENTIFICADOR   reduce using rule 15 (statement -> for_statement .)
    PRINTF          reduce using rule 15 (statement -> for_statement .)
    SCANF           reduce using rule 15 (statement -> for_statement .)
    TIPODATO        reduce using rule 15 (statement -> for_statement .)
    IF              reduce using rule 15 (statement -> for_statement .)
    ELSE            reduce using rule 15 (statement -> for_statement .)
    RLLAVE          reduce using rule 15 (statement -> for_statement .)


state 41

    (16) statement -> assignment_statement .

    FOR             reduce using rule 16 (statement -> assignment_statement .)
    IDENTIFICADOR   reduce using rule 16 (statement -> assignment_statement .)
    PRINTF          reduce using rule 16 (statement -> assignment_statement .)
    SCANF           reduce using rule 16 (statement -> assignment_statement .)
    TIPODATO        reduce using rule 16 (statement -> assignment_statement .)
    IF              reduce using rule 16 (statement -> assignment_statement .)
    ELSE            reduce using rule 16 (statement -> assignment_statement .)
    RLLAVE          reduce using rule 16 (statement -> assignment_statement .)


state 42

    (17) statement -> printf_statement .

    FOR             reduce using rule 17 (statement -> printf_statement .)
    IDENTIFICADOR   reduce using rule 17 (statement -> printf_statement .)
    PRINTF          reduce using rule 17 (statement -> printf_statement .)
    SCANF           reduce using rule 17 (statement -> printf_statement .)
    TIPODATO        reduce using rule 17 (statement -> printf_statement .)
    IF              reduce using rule 17 (statement -> printf_statement .)
    ELSE            reduce using rule 17 (statement -> printf_statement .)
    RLLAVE          reduce using rule 17 (statement -> printf_statement .)


state 43

    (18) statement -> scanf_statement .

    FOR             reduce using rule 18 (statement -> scanf_statement .)
    IDENTIFICADOR   reduce using rule 18 (statement -> scanf_statement .)
    PRINTF          reduce using rule 18 (statement -> scanf_statement .)
    SCANF           reduce using rule 18 (statement -> scanf_statement .)
    TIPODATO        reduce using rule 18 (statement -> scanf_statement .)
    IF              reduce using rule 18 (statement -> scanf_statement .)
    ELSE            reduce using rule 18 (statement -> scanf_statement .)
    RLLAVE          reduce using rule 18 (statement -> scanf_statement .)


state 44

    (19) statement -> declaration .

    FOR             reduce using rule 19 (statement -> declaration .)
    IDENTIFICADOR   reduce using rule 19 (statement -> declaration .)
    PRINTF          reduce using rule 19 (statement -> declaration .)
    SCANF           reduce using rule 19 (statement -> declaration .)
    TIPODATO        reduce using rule 19 (statement -> declaration .)
    IF              reduce using rule 19 (statement -> declaration .)
    ELSE            reduce using rule 19 (statement -> declaration .)
    RLLAVE          reduce using rule 19 (statement -> declaration .)


state 45

    (20) statement -> if_statement .

    FOR             reduce using rule 20 (statement -> if_statement .)
    IDENTIFICADOR   reduce using rule 20 (statement -> if_statement .)
    PRINTF          reduce using rule 20 (statement -> if_statement .)
    SCANF           reduce using rule 20 (statement -> if_statement .)
    TIPODATO        reduce using rule 20 (statement -> if_statement .)
    IF              reduce using rule 20 (statement -> if_statement .)
    ELSE            reduce using rule 20 (statement -> if_statement .)
    RLLAVE          reduce using rule 20 (statement -> if_statement .)


state 46

    (21) statement -> else_statement .

    FOR             reduce using rule 21 (statement -> else_statement .)
    IDENTIFICADOR   reduce using rule 21 (statement -> else_statement .)
    PRINTF          reduce using rule 21 (statement -> else_statement .)
    SCANF           reduce using rule 21 (statement -> else_statement .)
    TIPODATO        reduce using rule 21 (statement -> else_statement .)
    IF              reduce using rule 21 (statement -> else_statement .)
    ELSE            reduce using rule 21 (statement -> else_statement .)
    RLLAVE          reduce using rule 21 (statement -> else_statement .)


state 47

    (22) statement -> function_call .

    FOR             reduce using rule 22 (statement -> function_call .)
    IDENTIFICADOR   reduce using rule 22 (statement -> function_call .)
    PRINTF          reduce using rule 22 (statement -> function_call .)
    SCANF           reduce using rule 22 (statement -> function_call .)
    TIPODATO        reduce using rule 22 (statement -> function_call .)
    IF              reduce using rule 22 (statement -> function_call .)
    ELSE            reduce using rule 22 (statement -> function_call .)
    RLLAVE          reduce using rule 22 (statement -> function_call .)


state 48

    (46) for_statement -> FOR . LPAREN assignment_statement RPAREN block

    LPAREN          shift and go to state 64


state 49

    (28) assignment_statement -> IDENTIFICADOR . IGUAL expression PUNTOYCOMA
    (29) assignment_statement -> IDENTIFICADOR . CORCHETEIZQ expression CORCHETEDER IGUAL expression PUNTOYCOMA
    (40) function_call -> IDENTIFICADOR . LPAREN RPAREN PUNTOYCOMA

    IGUAL           shift and go to state 65
    CORCHETEIZQ     shift and go to state 66
    LPAREN          shift and go to state 67


state 50

    (41) printf_statement -> PRINTF . LPAREN CADENA RPAREN PUNTOYCOMA
    (42) printf_statement -> PRINTF . LPAREN CADENA COMA expression RPAREN PUNTOYCOMA

    LPAREN          shift and go to state 68


state 51

    (43) scanf_statement -> SCANF . LPAREN CADENA COMA AMPERSAND IDENTIFICADOR RPAREN PUNTOYCOMA

    LPAREN          shift and go to state 69


state 52

    (44) if_statement -> IF . LPAREN condition RPAREN block

    LPAREN          shift and go to state 70


state 53

    (45) else_statement -> ELSE . block
    (11) block -> . LLLAVE RLLAVE
    (12) block -> . LLLAVE statement_list RLLAVE

    LLLAVE          shift and go to state 25

    block                          shift and go to state 71

state 54

    (24) declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .

    COMA            reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    RPAREN          reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    FOR             reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    PRINTF          reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    SCANF           reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    TIPODATO        reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    IF              reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    ELSE            reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)
    RLLAVE          reduce using rule 24 (declaration -> TIPODATO IDENTIFICADOR IGUAL expression PUNTOYCOMA .)


state 55

    (30) expression -> expression SUMA . expression
    (30) expression -> . expression SUMA expression
    (31) expression -> . expression RESTA expression
    (32) expression -> . expression MULTI expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . NUMERO
    (35) expression -> . IDENTIFICADOR
    (36) expression -> . CADENA
    (37) expression -> . CARACTER
    (38) expression -> . condition
    (39) expression -> . LPAREN expression RPAREN
    (47) condition -> . expression COMPARADOR expression

    NUMERO          shift and go to state 29
    IDENTIFICADOR   shift and go to state 27
    CADENA          shift and go to state 30
    CARACTER        shift and go to state 31
    LPAREN          shift and go to state 33

    expression                     shift and go to state 72
    condition                      shift and go to state 32

state 56

    (31) expression -> expression RESTA . expression
    (30) expression -> . expression SUMA expression
    (31) expression -> . expression RESTA expression
    (32) expression -> . expression MULTI expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . NUMERO
    (35) expression -> . IDENTIFICADOR
    (36) expression -> . CADENA
    (37) expression -> . CARACTER
    (38) expression -> . condition
    (39) expression -> . LPAREN expression RPAREN
    (47) condition -> . expression COMPARADOR expression

    NUMERO          shift and go to state 29
    IDENTIFICADOR   shift and go to state 27
    CADENA          shift and go to state 30
    CARACTER        shift and go to state 31
    LPAREN          shift and go to state 33

    expression                     shift and go to state 73
    condition                      shift and go to state 32

state 57

    (32) expression -> expression MULTI . expression
    (30) expression -> . expression SUMA expression
    (31) expression -> . expression RESTA expression
    (32) expression -> . expression MULTI expression
    (33) expression -> . expression DIVIDE expression
    (34) expression -> . NUMERO
    (35) expression -> . IDENTIFICADOR
    (36) expression -> . CADENA
    (37) expression -> . CARACTER
    (38) expression -> . condition
    (39) expression -> . LPAREN expression RPAREN
    (47) condition -> . expression COMPARADOR expression

    NUMERO          shift and go to state 29
    IDENTIFICADOR   shift and go to state 27
    CADENA          shift and go to state 30
    CARACTER        shift and go to state 31
    LPAREN          shift and go to state 33

    expression                     shift and go to state 74
    condition                      shift and go to state 32

state 58
